# microdot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-bake.hcl  docker-compose.yaml  live-server.Dockerfile  microdot.Dockerfile  problems.dot  problems.json  rustfmt.toml
.run/: Check.run.xml  Clippy.run.xml  Run.run.xml  build.run.xml
docs/: architectural-breakdown.md  future-ideas.md  yew.md
examples/: bit_of_everything.dot  bit_of_everything.html  business_example_1.dot  business_example_1.html  business_example_1.json  business_example_1.presentation.dot  business_example_1.txt  fellowship.dot  fellowship.html  fellowship.json  fellowship.presentation.dot  fellowship.txt  readme_example_1.dot  readme_example_1.html  readme_example_1.json  readme_example_1.presentation.dot  readme_example_1.txt  story.dot  story.json  subgraphs.dot  subgraphs.html  subgraphs.json  subgraphs.txt  variables.dot  variables.html  variables.json  variables.txt
manage_semver/: Cargo.toml
manage_semver/src/: main.rs
microdot/: Cargo.toml
microdot-colors/: Cargo.toml
microdot-colors/src/: colors.rs  lib.rs  palettes.rs  palettes.txt
microdot-core/: Cargo.toml
microdot-core/src/: command.rs  exporter.rs  graph.rs  hash.rs  labels.rs  lib.rs  pet.rs  util.rs
microdot-graph/: Cargo.toml
microdot-layout/: Cargo.toml
microdot/src/: colors.rs  fdg.rs  filters.rs  graphviz.rs  help-commands.txt  help.txt  help.txt.tpl  helper.rs  json.rs  lib.rs  main.rs  parser.rs  repl.rs  storage.rs  svg.rs  util.rs  web.rs
microdot/templates/: README.md  graph.txt  hashtag.html  image_page.html  node.html  node.txt  node_line.txt
microdot/tests/: prepare_readme.rs
src/: Cargo.toml
src/microdot/: Cargo.toml
src/microdot-core/: Cargo.toml
src/microdot-core/src/: graph.rs  lib.rs
src/microdot/src/: graphviz.rs  json.rs  lib.rs  main.rs  palettes.rs  repl.rs  svg.rs
src/src/: colors.rs  graph.rs  graphviz.rs  help.txt  helper.rs  json.rs  lib.rs  main.rs  my_khroma_data.json  palettes.rs  palettes.txt  parser.rs  repl.rs  template.dot
src/templates/: hashtag.html  node.html
src/test_data/: exports_graph.dot  exports_graph.json  exports_graph.txt  imports_graph.json
test_data/: exports_graph.dot  exports_graph.html  exports_graph.json  imports_graph.json
