[workspace]
resolver = "2"

members = ["manage_semver",
    "microdot*",
]

[workspace.dependencies]
axum = { version = "0.7" }
axum-server = { version = "0.6" }
anyhow = "1.0"
askama = "0.11"
clap = { version = "4.5", features = ["derive"] }
command-macros = "0.2"
dirs = "5.0"
futures = "0.3"
hex = "0.4"
hyphenation = "0.8"
layout-rs = { version = "0.1.2" }
lazy_static = "1.4"
md5 = "0.7"
palette = "0.7"
petgraph = "0.6"
pom = "3.2"
once_cell = "1.16"
regex = "1.5"
resvg = "0.42"
rustyline = "14.0"
rustyline-derive = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tempfile = "3.8"
textwrap = { version = "0.16", features = ["hyphenation"] }
tokio = { version = "1.23", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
unfold = "0.2"
