[package]
name = "microdot"
version = "0.1.0"
edition = "2018"

[[bin]]
name="microdot"
path="src/main.rs"

[lib]
name="libmicrodot"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
askama = "0.11"
clap = { version="3.1", features=["derive"] }
command-macros = "0.2"
dirs = "4.0"
hex="0.4"
hyphenation = "0.8"
lazy_static = "1.4"
md5 = "0.7"
microdot-core= { path="../microdot-core" }
palette="0.6"
pom = "3.2"
regex = "1.5"
rustyline = "9.0"
rustyline-derive = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = { version="0.15", features = ["hyphenation"] }

[dev-dependencies]
unfold = "0.2"