[package]
name = "microdot"
version = "0.1.0"
edition = "2018"

[[bin]]
name="microdot"
path="src/main.rs"

[lib]
name="libmicrodot"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microdot-core = { path="../microdot-core" }

anyhow.workspace=true
askama.workspace=true
clap.workspace=true
command-macros.workspace=true
dirs.workspace=true
futures.workspace=true
hex.workspace=true
hyphenation.workspace=true
lazy_static.workspace=true
md5.workspace=true
once_cell.workspace=true
palette.workspace=true
pom.workspace=true
regex.workspace=true
rustyline.workspace=true
rustyline-derive.workspace=true
serde.workspace=true
serde_json.workspace=true
textwrap.workspace=true
tokio.workspace=true
unfold.workspace=true
resvg.workspace=true