[package]
name = "microdot"
version = "0.1.0"
edition = "2018"

[[bin]]
name="microdot"
path="src/main.rs"

[lib]
name="libmicrodot"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
command-macros = "0.2"
lazy_static = "1.4"
pom = "3.2"
regex = "1.5"
rustyline = "9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"